--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+		<script type="text/javascript" src="chaozhou-min.js"></script>
 		<style>
 			#grid{
 				margin:auto auto;
@@ -18,12 +19,12 @@
 			<div row="1" col="3" rowSpan="2" style="background-color:#AAA;"></div>
 		</div>
 	
-		<script src='src\base.js'></script>
+		<!--<script src='src\base.js'></script>
 		<script src='src\block.js'></script>
 		<script src='src\grid-metro.js'></script> 
 		<script src='src\grid-jQuery.js'></script> 
-		<!-- Unit Test Files -->
-		<script src='test\test.js'></script>
+		 Unit Test Files 
+		<script src='test\test.js'></script>-->
 		<!--<script src='test\grid-metro-test.js'></script> 
 		<script src='test\base-test.js'></script> 
 		<script src='test\block-test.js'></script>-->
